--- a/.github/workflows/manualwebpage.yml
+++ b/.github/workflows/manualwebpage.yml
@@ -2,44 +2,36 @@
 
 name: CICD Website na VM 01 do Azure
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
-# Allows you to run this workflow manually from the Actions tab
-workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-  # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: webpage
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-# Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        pwd 
-        ls -l
-        echo Add other actions to build,
-        echo test, and deploy your project.
-        echo $({ secrets.SSHKEY }} > chave.pem
-        ls -l
-        chmod 600 chave.pem
-        ssh -o StrictHostKeyChecking=no -i chave.pem gestor@98.66.211.8 "apt update; apt install apache2"
-        ls.l
-  #scp -i chave.pem gestor@98.66.211.8:/index.html /var/www/html/index.html
+      - name: Run a multi-line script
+        run: |
+          pwd
+          ls -l
+          echo Add other actions to build,
+          echo test, and deploy your project.
+          echo "${{ secrets.SSHKEY }}" > chave.pem
+          chmod 600 chave.pem
+          ls -l
+          ssh -o StrictHostKeyChecking=no -i chave.pem gestor@98.66.211.8 "\
+            sudo apt update && \
+            sudo apt install -y apache2 && \
+            sudo chmod -R 777 /var/www/html"
+          scp -o StrictHostKeyChecking=no -i chave.pem ./index.html gestor@98.66.211.8:/var/www/html/index.html
+          ls -l
