--- a/.github/workflows/manualwebpage.yml
+++ b/.github/workflows/manualwebpage.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CICD Website na VM 01 do Azure
+name: website
 
 on:
   push:
